--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "neko314-module",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "description": "This is a test module. Please ignore!",
   "main": "index.js",
   "scripts": {
-    "test": "node index.test.js"
+    "test": "node index.test.js",
+    "prepublish": "npm test"
   },
   "author": "Kaneko Keiko",
   "license": "MIT",
