Modify scripts, prepublish -> prepare
As of npm@5, `prepublish` scripts are deprecated.
Use `prepare` for build steps and `prepublishOnly` for upload-only.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "node index.test.js",
-    "prepublish": "npm test"
+    "prepare": "npm test"
+  },
+  "bin": {
+    "greeter": "bin/greeter.js"
   },
   "author": "Kaneko Keiko",
   "license": "MIT",
